fixed cropping issue

--- a/ORA_LayerCropper/src/application/application.css
+++ b/ORA_LayerCropper/src/application/application.css
@@ -1,6 +1,2 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 
-.imgview
-{
-	-fx-background-color: #FFFFFF;
-}
